[macOS WK1] ASSERTION FAILED: formData in WebCore::ResourceRequest::doUpdateResourceHTTPBody() https://bugs.webkit.org/show_bug.cgi?id=196864 <rdar://problem/49854497>

Reviewed by Alex Christensen.

LayoutTests/imported/w3c:

* web-platform-tests/xhr/send-redirect-post-upload-expected.txt:

Source/WebCore:

In case of redirection, it is sometimes not possible to retrieve the form data
from its NSInputStream in case of redirections.
To handle this case, reuse the first request form data if the new request has a body.
We also clear the HTTP content type in such a case if the original request has no content type.

Covered by re-enabled tests.

* platform/network/mac/WebCoreResourceHandleAsOperationQueueDelegate.mm:
(-[WebCoreResourceHandleAsOperationQueueDelegate connection:willSendRequest:redirectResponse:]):

LayoutTests:

* platform/mac-wk1/TestExpectations:


Canonical link: https://commits.webkit.org/211626@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@244813 268f45cc-cd09-0410-ab3c-d52691b4dbfc