Source/WebCore/platform/network/mac/WebCoreResourceHandleAsOperationQueueDelegate.mm
@@ -139,7 +139,14 @@ static bool scheduledWithCustomRunLoopMode(const Optional<SchedulePairHashSet>& 
             return;
         }
 
-        m_handle->willSendRequest(newRequest.get(), redirectResponse.get(), [self, protectedSelf = WTFMove(protectedSelf)](ResourceRequest&& request) {
+        ResourceRequest redirectRequest = newRequest.get();
+        if ([newRequest.get() HTTPBodyStream]) {
+            ASSERT(m_handle->firstRequest().httpBody());
+            redirectRequest.setHTTPBody(m_handle->firstRequest().httpBody());
+        }
+        if (m_handle->firstRequest().httpContentType().isEmpty())
+            redirectRequest.clearHTTPContentType();
+        m_handle->willSendRequest(WTFMove(redirectRequest), redirectResponse.get(), [self, protectedSelf = WTFMove(protectedSelf)](ResourceRequest&& request) {
             m_requestResult = request.nsURLRequest(HTTPBodyUpdatePolicy::UpdateHTTPBody);
             m_semaphore.signal();
         });
